Update CustomerService.java