@@ -1,12 +1,14 @@
 package com.timeless.shoes.customers;
 
-import java.util.Collections;
-import java.util.List;
 import org.springframework.stereotype.Service;
+
+import java.util.List;
 
 @Service
 public class CustomerService {
-    public List<Object> getAllCustomers() {
-        return Collections.emptyList(); // stub
+
+    public List<Customer> getAllCustomers() {
+        // stub returns empty list
+        return List.of();
     }
 }
